[package]
name = "codox"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
borsh = "0.10"
thiserror = "1.0"
num-derive = "0.4"
num-traits = "0.2"
arrayref = "0.3"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = [] 